Add private lock to dm_dev_t used for mutual exclusion for diks(9) api routines. This change fixes PR kern/42532.